extra item on homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
     <h1>HOMESTUFF:</h1>
     <div class="menu_items">    
         {% for item in media_items %}
-        <h2>title = {{ item["title"] }}</h2>
+        <h2>title = {{ item["title"] }}</h2><h4>id = {{ item["id"] }} </h4>
         <p>type = {{ item["type"] }} </p>
         <p>genre = {{ item["genre"] }} </p>
         <p>summary = {{ item["summary"] }} </p>
