--- a/templates/home.html
+++ b/templates/home.html
@@ -1,30 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Untitled 4</title>
-    <link rel="stylesheet" href="/static/menu.css">
-  </head>
-  <body>
-    <a href="/menu">Menu</a>
-    <a href="/about">About</a>
-    <a href="/contact">Contact</a>
-    <a href="/add">Add Media Item</a>
-    <a href="/form/food/edit">Edit Food</a>
-    <a href="/form/food/delete">Delete Food</a>
-    <img class="banner" src="https://static.vecteezy.com/system/resources/thumbnails/006/296/747/small/bookshelf-with-books-biography-adventure-novel-poem-fantasy-love-story-detective-art-romance-banner-for-library-book-store-genre-of-literature-illustration-in-flat-style-vector.jpg">
-    <h1>HOMESTUFF:</h1>
-    <div class="menu_items">    
-        {% for item in media_items %}
-        <h2>title = {{ item["title"] }}</h2><h4>id = {{ item["id"] }} </h4>
-        <p>type = {{ item["type"] }} </p>
-        <p>genre = {{ item["genre"] }} </p>
-        <p>summary = {{ item["summary"] }} </p>
-        <img class="media_img" src='{{ item["image"] }}'>
-      {% endfor %}
+{% extends 'base.html' %} 
+ 
+{% block content %}
+<h2>Viewing {{ username }}'s Library</h2>
+ 
+<div class="row">
+    {% for item in media_items %}
+    <div class="card w-25 p-2">
+        <img class="card-img-top" src="{{ item['image'] }}" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">{{ item["title"] }}</h5>
+            <p class="card-text">{{ item["summary"] }}</p>
+            <p>ID: {{ item["id"] }}</p>
+            <p>Type: {{ item["type"] }} </p>
+            <p>Genre: {{ item["genre"] }} </p>
+            <a href="#" class="btn btn-primary">Edit</a> <a href="#" class="btn btn-primary">Delete</a>
+        </div>
     </div>
-</body>
-</html>
-
+    {% endfor %}
+</div>
+{% endblock %}
