--- a/templates/base.html
+++ b/templates/base.html
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nebula Media Library</title>
- 
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/menu.css">
 </head>
- 
+
 <body class="bg-light">
     <div class="container">
         <div class="py-5 text-center">
             <h2>Nebula Media Library</h2>
         </div>
- 
-        <div id="nav">
-            <a href="/">Home</a> |
+
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+            </li>
             {% if username: %}
-            <a href="/add">Add</a> |
-            <a href="/logout">Log Out</a>
+            <li class="nav-item">
+                <a class="nav-link" href="/add">Add Media</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Log Out</a>
+            </li>
             {% else %}
-            <a href="/login">Log In / Sign Up</a>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">Log In / Sign Up</a>
+            </li>
             {% endif %}
-        </div>
- 
+        </ul>
+
         <div id="content">
             {% block content %}{% endblock %}
         </div>
- 
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
 </body>
- 
+
 </html>
