added type links

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,21 @@
             </li>
             {% if username: %}
             <li class="nav-item">
+                <a class="nav-link" href="/type/Movie">Movies</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/type/TV">TV</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/type/Game">Games</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/type/Book">Books</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/type/Music">Music</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/add">Add Media</a>
             </li>
             <li class="nav-item">
