--- a/templates/base.html
+++ b/templates/base.html
@@ -13,14 +13,14 @@
 </head>
 
 <body class="bg-light">
-    <div class="container">
+    <div class="container mb-4">
         <div class="py-5 text-center">
-            <h2>Nebula Media Library</h2>
+            <h2>{{ username }}'s Library</h2>
         </div>
 
-        <ul class="nav justify-content-center">
+        <ul class="nav justify-content-center bg-info">
             <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
+                <a class="nav-link text-white" href="/">Home</a>
             </li>
             {% if username: %}
             <li class="nav-item">
@@ -39,14 +39,14 @@
                 <a class="nav-link" href="/type/Music">Music</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/add">Add Media</a>
+                <a class="nav-link text-white" href="/add">Add Media</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/logout">Log Out</a>
+                <a class="nav-link text-white" href="/logout">Log Out</a>
             </li>
             {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="/login">Log In / Sign Up</a>
+                <a class="nav-link text-white" href="/login">Log In / Sign Up</a>
             </li>
             {% endif %}
         </ul>
