--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Viewing {{ username }}'s Library</h2>
-
 <div class="row">
     {% for item in media_items %}
     <div class="card w-25 p-2">
@@ -13,7 +11,8 @@
             <p>ID: {{ item["id"] }}</p>
             <p>Type: {{ item["type"] }} </p>
             <p>Genre: {{ item["genre"] }} </p>
-            <a href="#" class="btn btn-primary">Edit</a> <a href="#" class="btn btn-primary">Delete</a>
+            <a href="/edit/{{ item['id'] }}" class="btn btn-primary">Edit</a> <a href="/del/{{ item['id'] }}"
+                class="btn btn-primary">Delete</a>
         </div>
     </div>
     {% endfor %}
