super secret key stuff

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
             <h2>{% if username: %}{{ username }}'s{% else %}Media{% endif %} Library</h2>
         </div>
 
-        <ul class="nav justify-content-center bg-info">
+        <ul class="nav justify-content-center bg-info mb-4">
             <li class="nav-item">
                 <a class="nav-link text-white" href="/">Home</a>
             </li>
