i am an idiot i didnt rename the png inthe html

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,7 @@
 <body class="bg-light">
     <div class="container mb-4">
         <div class="py-5 text-center">
-            <h2>{% if username: %}{{ username }}'s{% else %}Media{% endif %} Library</h2>
-            <img class="img-fluid" src="{{ url_for('static', filename='header.jpg') }}" />
+            <img class="img-fluid" src="{{ url_for('static', filename='nebula2.png') }}" />
         </div>
 
         <ul class="nav justify-content-center bg-info mb-4">
