--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/static/menu.css">
 </head>
 
-<body class="bg-light">
+<body data-bs-theme="dark">
     <div class="container mb-4">
         <div class="py-5 text-center">
             <img class="img-fluid" src="{{ url_for('static', filename='nebula2.png') }}" />
