still working on dark mode

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -29,7 +29,7 @@
         <textarea id="summary" name="summary" class="form-control" rows="3">{{ media_summary }}</textarea>
     </div>
     <input id="media_id" name="media_id" type="hidden" value="{{ media_id }}">
-    <button type="submit" class="btn btn-primary mb-2">Edit Media</button>
+    <button type="submit" class="btn btn-secondary mb-2">Edit Media</button>
 
 </form>
 {% endblock %}
