--- a/templates/base.html
+++ b/templates/base.html
@@ -20,33 +20,33 @@
 
         <ul class="nav justify-content-center bg-info mb-4">
             <li class="nav-item">
-                <a class="nav-link text-white" href="/">{% if username: %}{{ username }}'s{% else %}Media{% endif %} Library</a>
+                <a class="nav-link text-warning" href="/">{% if username: %}{{ username }}'s{% else %}Media{% endif %} Library</a>
             </li>
             {% if username: %}
             <li class="nav-item">
-                <a class="nav-link text-warning" href="/type/Movie">Movies</a>
+                <a class="nav-link text-white" href="/type/Movie">Movies</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-warning" href="/type/TV">TV</a>
+                <a class="nav-link text-white" href="/type/TV">TV</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-warning" href="/type/Game">Games</a>
+                <a class="nav-link text-white" href="/type/Game">Games</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-warning" href="/type/Book">Books</a>
+                <a class="nav-link text-white" href="/type/Book">Books</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-warning" href="/type/Music">Music</a>
+                <a class="nav-link text-white" href="/type/Music">Music</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="/add">Add Media</a>
+                <a class="nav-link text-success" href="/add">Add Media</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="/logout">Log Out</a>
+                <a class="nav-link text-muted" href="/logout">Log Out</a>
             </li>
             {% else %}
             <li class="nav-item">
-                <a class="nav-link text-white" href="/login">Log In / Sign Up</a>
+                <a class="nav-link text-info" href="/login">Log In / Sign Up</a>
             </li>
             {% endif %}
         </ul>
@@ -54,7 +54,13 @@
         <div id="content">
             {% block content %}{% endblock %}
         </div>
-
+        <div class="row">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <div class="col-md-4 d-flex align-items-center">
+                    <span class="text-muted">© 2023 Century Flow, Inc</span>
+                </div>
+            </footer>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
