--- a/templates/del.html
+++ b/templates/del.html
@@ -9,7 +9,7 @@
         <div class="card-body">
             <h5 class="card-title">{{ media_title }}</h5>
             <p class="card-text">Are you sure you want to delete this item? This can not be undone.</p>
-            <button type="submit" class="btn btn-primary mb-2">Delete Media</button>
+            <button type="submit" class="btn btn-danger mb-2">Delete Media</button>
         </div>
     </div>
     <input id="media_id" name="media_id" type="hidden" value="{{ media_id }}">
