--- a/templates/home.html
+++ b/templates/home.html
@@ -1,18 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="row">
+<div class="row justify-content-between">
     {% for item in media_items %}
-    <div class="card w-25 p-2">
-        <img class="card-img-top" src="{{ item['image'] }}" alt="Card image cap">
+    <div class="card m-2 p-2 bg-secondary text-dark" style="width: 23%">
+        <img class="card-img-top" src="{{ item['image'] }}" alt="">
         <div class="card-body">
             <h5 class="card-title">{{ item["title"] }}</h5>
             <p class="card-text">{{ item["summary"] }}</p>
             <p>ID: {{ item["id"] }}</p>
             <p>Type: {{ item["type"] }} </p>
             <p>Genre: {{ item["genre"] }} </p>
-            <a href="/edit/{{ item['id'] }}" class="btn btn-primary">Edit</a> <a href="/del/{{ item['id'] }}"
-                class="btn btn-primary">Delete</a>
+            <a href="/edit/{{ item['id'] }}" class="btn btn-dark">Edit</a> <a href="/del/{{ item['id'] }}" class="btn btn-danger">Delete</a>
         </div>
     </div>
     {% endfor %}
