--- a/templates/login.html
+++ b/templates/login.html
@@ -41,7 +41,7 @@
                     <label for="password">Password</label><br />
                     <input id="password" type="password" name="password">
                 </div>
-                <button type="submit" class="btn btn-primary mb-2">Log In</button>
+                <button type="submit" class="btn btn-info mb-2">Log In</button>
             </form>
         </div>
         <div class="col-sm m-4">
@@ -56,7 +56,7 @@
                     <input id="password" type="password" name="password">
                 </div>
 
-                <button type="submit" class="btn btn-secondary mb-2">Sign Up</button>
+                <button type="submit" class="btn btn-info mb-2">Sign Up</button>
             </form>
         </div>
     </div>
