--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="jumbotron p-3 m-4 p-md-5 text-white rounded bg-dark">
+        <div class="jumbotron p-3 m-4 p-md-5 text-white rounded bg-secondary">
             Welcome to the Nebula Media Library! This service lets you create a free account and keep track of all your
             physical media, such as BluRay discs, DVDs, LPs, books, and more.
         </div>
@@ -21,7 +21,7 @@
                     <label for="password">Password</label><br />
                     <input id="password" type="password" name="password">
                 </div>
-                <button type="submit" class="btn btn-primary mb-2">Log In</button>
+                <button type="submit" class="btn btn-info mb-2">Log In</button>
             </form>
         </div>
         <div class="col-sm m-4">
@@ -36,7 +36,7 @@
                     <input id="password" type="password" name="password">
                 </div>
 
-                <button type="submit" class="btn btn-secondary mb-2">Sign Up</button>
+                <button type="submit" class="btn btn-info mb-2">Sign Up</button>
             </form>
         </div>
     </div>
