--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
             <img class="img-fluid" src="{{ url_for('static', filename='nebula2.png') }}" />
         </div>
 
-        <ul class="nav justify-content-center bg-info mb-4">
+        <ul class="nav justify-content-center bg-secondary mb-4">
             <li class="nav-item">
                 <a class="nav-link text-warning" href="/">{% if username: %}{{ username }}'s{% else %}Media{% endif %} Library</a>
             </li>
