changed add media to blue

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                 <a class="nav-link text-white" href="/type/Music">Music</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-success" href="/add">Add Media</a>
+                <a class="nav-link text-info" href="/add">Add Media</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-muted" href="/logout">Log Out</a>
